java 16 stuff and headaches